--- a/css/styles.css
+++ b/css/styles.css
@@ -1,4 +1,3 @@
-/* /123 */
 :root {
     --primary-font: "Montserrat", sans-serif;
 
@@ -52,6 +51,11 @@ button {
     font-family: inherit;
     color: currentColor;
     cursor: pointer;
+}
+
+button:hover,
+button:focus {
+    background-color: #3f6370;
 }
 
 /* Reset End */
@@ -138,13 +142,18 @@ button {
   | Meaningful climate
   |============================
 */
+.container-box {
+    display: flex;
+
+}
 
 /* Na ves moy block */
 .container-meaningful- {
     /* width: 1200px; */
-    height: 400px;
-    background-color: white;
     display: flex;
+    padding-top: 30px;
+    /* height: 400px; */
+    /* background-color: white; */
     /* flex-wrap: wrap; */
 
 }
